--- a/web/website/templates/sites/about.html
+++ b/web/website/templates/sites/about.html
@@ -6,5 +6,5 @@
 
 {% include 'sites/snippets/two-grid.html' %}
 {% include 'sites/snippets/team.html' %}
-{% include 'sites/snippets/video.html' %}
+{% include 'sites/snippets/story.html' %}
 {% endblock %}
