--- a/web/website/templates/sites/snippets/two-grid.html
+++ b/web/website/templates/sites/snippets/two-grid.html
@@ -4,7 +4,7 @@
       <div class="container py-md-3">
         <div class="row cwp17-two align-items-center">
           <div class="col-md-6 cwp17-image">
-            <img class="img-fluid" alt="" src="{% static '/images/business.png' %}">
+            <img class="img-fluid" alt="" src="{% static '/images/main.png' %}">
           </div>
           <div class="col-md-6 cwp17-text">
             <h2>{{ headline }}</h2>
