--- a/web/website/templates/sites/values.html
+++ b/web/website/templates/sites/values.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block content %}
 <section class="w3l-career1 py-5 mt-5">
+</section>
+
+<!-- <section class="w3l-career1 py-5 mt-5">
   <div class="growth-align py-md-5 py-0 mt-5">
     <div class="container py-md-5 py-0">
       <div class="row growth-info justify-content-center align-items-center text-center py-md-5 w-100 mx-auto">
@@ -10,37 +13,37 @@
           <p class="my-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor atque consequuntur unde,
             necessitatibus
             quaerat fuga explicabo, quis placeat iure perferendis alias libero velit officiis.</p>
-          <a href="#positions" class="btn btn-primary btn-theme">Download Values</a>
-        </div>
+            <a href="/newsfeed/subscribe" class="btn btn-primary btn-theme">Subscripe to Newsletter</a>
+          </div>
           <div class="position-absolute img-circle emp-pos1 d-md-block d-none">
-            <img src="assets/images/emp1.jpg" class="img-fluid rounded" alt="Employee Image">
+            <img src="/media/uploads/logo.jpg" class="img-fluid rounded" alt="Employee Image">
           </div>
           <div class="position-absolute img-circle emp-pos2 d-md-block d-none">
-            <img src="assets/images/emp2.jpg" class="img-fluid rounded" alt="Employee Image">
+            <img src="/media/uploads/logo.jpg" class="img-fluid rounded" alt="Employee Image">
           </div>
           <div class="position-absolute img-circle emp-pos3 d-md-block d-none">
-            <img src="assets/images/emp3.jpg" class="img-fluid rounded" alt="Employee Image">
+            <img src="/media/uploads/logo.jpg" class="img-fluid rounded" alt="Employee Image">
           </div>
           <div class="position-absolute img-circle emp-pos4 d-md-block d-none">
-            <img src="assets/images/emp4.jpg" class="img-fluid rounded" alt="Employee Image">
+            <img src="/media/uploads/logo.jpg" class="img-fluid rounded" alt="Employee Image">
           </div>
           <div class="position-absolute img-circle emp-pos5 d-md-block d-none">
-            <img src="assets/images/emp5.jpg" class="img-fluid rounded" alt="Employee Image">
+            <img src="/media/uploads/logo.jpg" class="img-fluid rounded" alt="Employee Image">
           </div>
           <div class="position-absolute img-circle emp-pos6 d-md-block d-none">
-            <img src="assets/images/emp6.jpg" class="img-fluid rounded" alt="Employee Image">
+            <img src="/media/uploads/logo.jpg" class="img-fluid rounded" alt="Employee Image">
           </div>
           <div class="position-absolute img-circle emp-pos7 d-md-block d-none">
-            <img src="assets/images/emp7.jpg" class="img-fluid rounded" alt="Employee Image">
+            <img src="/media/uploads/logo.jpg" class="img-fluid rounded" alt="Employee Image">
           </div>
           <div class="position-absolute img-circle emp-pos8 d-md-block d-none">
-            <img src="assets/images/emp8.jpg" class="img-fluid rounded" alt="Employee Image">
+            <img src="/media/uploads/logo.jpg" class="img-fluid rounded" alt="Employee Image">
           </div>
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 {% include 'sites/snippets/two-grid.html' %}
-{% include 'sites/snippets/video.html' %}
+{% include 'sites/snippets/story.html' %}
 {% endblock %}
